classDiagram
    class Customers {
        customer_id
        customer_unique_id
        customer_zip_code_prefix
        customer_city
        customer_state
    }
    class Orders {
        order_id
        customer_id
        order_status
        order_purchase_timestamp
        order_approved_at
        order_delivered_carrier_date
        order_delivered_customer_date
        order_estimated_delivery_date
    }
    class OrderItems {
        order_id
        order_item_id
        product_id
        seller_id
        shipping_limit_date
        price
        freight_value
    }
    class Products {
        product_id
        product_category_name
        product_name_lenght
        product_description_lenght
        product_photos_qty
        product_weight_g
        product_length_cm
        product_height_cm
        product_width_cm
    }
    class Sellers {
        seller_id
        seller_zip_code_prefix
        seller_city
        seller_state
    }
    class Reviews {
        review_id
        order_id
        review_score
        review_comment_title
        review_comment_message
        review_creation_date
        review_answer_timestamp
    }
    class Geolocations {
        zip_code_prefix
        latitude
        longitude
        city
        state
    }
    Customers "1" -- "*" Orders : faz
    Orders "1" -- "*" OrderItems : contem
    OrderItems "*" -- "1" Products : refere-se
    OrderItems "*" -- "1" Sellers : vendido_por
    Orders "1" -- "1" Reviews : recebe
    Customers "*" -- "1" Geolocations : localiza
    Sellers "*" -- "1" Geolocations : localiza
